--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/express": "^4.17.15",
         "dotenv": "^16.0.3",
         "esbuild": "^0.16.7",
+        "esbuild-node-externals": "^1.6.0",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.4"
     }
